fix spacing header

--- a/modules/tumtook-api-catalog-viewer/assets/css/frontend.css
+++ b/modules/tumtook-api-catalog-viewer/assets/css/frontend.css
@@ -21,7 +21,7 @@
   	padding-bottom:8px;
 	background: #ffffff;
 	border: 1px solid #e7e7e7;
-	border-radius: 25px;
+	border-radius: 15px;
 	box-shadow: 0 6px 16px rgba(15, 23, 42, 0.04);
   	padding: 0;
 }
